src/app/component/app-public-nav-bar/app-public-nav-bar.component.scss
@import 'ws-mixins';

//  @import 'src/themes/theme-muave.scss';

//  $primary: $theme-primary;
#publicWhiteNavBar {
  background-color: white;
}

.app-logo {
  // min-width: 8rem;
  margin-top: -0.5rem;
  padding: 15px 0 0 8px;
  // padding-top: 15px;
  width: 100px;
}

.btn-size {
  padding: 0px 6px 0px 6px;
}

@media only screen and (min-width: 360px) and (max-width: 599px) {
  .app-logo {
    width: 6rem !important;
    // margin-top: 0.5rem !important;
    min-width: auto !important;
  }
}

@media only screen and (min-width: 599px) and (max-width: 629px) {
  .app-logo {
    width: 7rem !important;
    margin-top: auto !important;
    padding: 4px 0px 0px 8px;
    min-width: auto !important;
  }
}

@media only screen and (min-width: 312px) and (max-width: 359px) {
  .app-logo {
    width: 5rem !important;
    margin-top: 1rem !important;
    min-width: auto !important;
  }

  .logosize {
    height: 5rem !important;
    overflow-y: visible !important;
  }
}

.logosize {
  overflow-y: hidden;
  height: 3rem;
}

.title-app {
  @include breakpoint-xs {
    visibility: hidden;
  }
}

.small-font-size {
  @include breakpoint-xs {
    font-size: 10px !important;
  }
}

.padding-remove-small {
  @include breakpoint-xs {
    padding: 0 !important;
  }
}

.mat-dialog-actions {

  // ...
  &[align='end'] {
    justify-content: flex-end;
  }
}

.padding-remove-small.color {
  // background: #865ba0 !important;
  // color: white !important;
      // background: mat-color($primary) !important;
      // color:white !important;
  color: #fff !important;
  background-color: #451771 !important;
  border-color: #451771 !important;
  border-radius: 0px !important;
  border: 0px !important;
  width: 100% !important;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
    0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
}
// .exploreclass{
//   color: black !important;
//   padding-left: 1em ;
// }
.btn-clr{
  color: black !important;
  padding-left: 1em ;
}

